# roboteam_tactics

./: .gitignore  CMakeLists.txt  Formations.json  NodeWrapper.cpp  NodeWrapper.hpp  Profiling  README.md  attackers.launch  battle.launch  debug_names.txt  defenders.launch  generate.sh  generate_all_custom_nodes.json  generate_all_leafs.sh  generate_cpp_from_json.sh  generate_json_for_editor.sh  icpt_tester.py  icpt_tester.py.bkp  package.xml  passtopoint.launch  penalty.launch  player_battle.launch  refresh_b3_projects.sh  roboteam_tactics_docs.xml  strat_role.launch  tactics.go
src/analysis/: CMakeLists.txt  SimpleAnalysis.cpp  SpaceAnalysis.cpp
src/bt/: BehaviorTree.cpp  Blackboard.cpp  CMakeLists.txt  Composite.cpp  Decorator.cpp  Leaf.cpp  Node.cpp
src/bt/composites/: MemSelector.cpp  MemSequence.cpp  ParallelSequence.cpp  Selector.cpp  Sequence.cpp
src/bt/decorators/: Failer.cpp  Inverter.cpp  Repeater.cpp  Succeeder.cpp  UntilFail.cpp  UntilSuccess.cpp
src/conditions/: AimingAtOpponent.cpp  BallOnOurSide.cpp  BallOnTheirSide.cpp  CMakeLists.txt  CanClaimBall.cpp  CanInterceptBall.cpp  CanInterceptBallDuel.cpp  CanKeeperMove.cpp  CanPassSafely.cpp  CanReachPoint.cpp  CanSeePoint.cpp  CanSeeRobot.cpp  CanSeeTheirGoal.cpp  DistanceXToY.cpp  IHaveBall.cpp  IsBallInDefenseArea.cpp  IsBallInGoal.cpp  IsBallInZone.cpp  IsBallMovingTowardsGoal.cpp  IsBallMovingTowardsRobot.cpp  IsInDefenseArea.cpp  IsInZone.cpp  IsRefCommand.cpp  IsRefStage.cpp  IsRobotClosestToBall.cpp  IsRobotClosestToSecondDangerOpp.cpp  KeeperHasBall.cpp  ParamCheck.cpp  PassToMe.cpp  TeamHasBall.cpp  TheyHaveBall.cpp  WeHaveBall.cpp  unity.cpp
src/conditions/tests/: CanPassSafelyTest.cpp  CanReachPointTest.cpp  CanSeeRobotTest.cpp
src/learning/: CMakeLists.txt  LearnGoToPos.cpp
src/rules/: CMakeLists.txt  FreeKickThemRule.cpp  FreeKickUsRule.cpp  HaltRule.cpp  KickoffRule.cpp  Rules.cpp  StartRules.cpp  StopRule.cpp  TimeoutRule.cpp
src/skills/: AimAt.cpp  AimAtSafe.cpp  Anouk_PenaltyKeeper.cpp  Approach.cpp  AvoidRobots.cpp  BackUp.cpp  BallPlacement.cpp  BallPlacementTest _oldversion.cpp  BallPlacementTest.cpp  Block.cpp  BlockGoal.cpp  CMakeLists.txt  Chip.cpp  DebugTrace.cpp  DefendGoalarea.cpp  DefendPenalty.cpp  Dribble.cpp  DribbleCurve.cpp  Evade.cpp  Failer.cpp  FindPath.cpp  FollowPath.cpp  Freeze.cpp  Geneva.cpp  GenevaKick.cpp  GetBall.cpp  GetBallTest.cpp  GoToPos.cpp  GoToPosAlt.cpp  GoToXY.cpp  Harass.cpp  KeepPosition.cpp  KeeperBlock.cpp  KeeperV2.cpp  Kick.cpp  KickPenalty.cpp  KickSkill.cpp  MirrorOpponent.cpp  NaiveBlockGoal.cpp  ParamSet.cpp  (+23 more)
src/skills/tests/: AvoidRobotsTest.cpp  DribbleTest.cpp  FollowPathTest.cpp  GetBallTest.cpp  GoToPosTest.cpp  KickSkillTest.cpp  KickTest.cpp  KickToGoalTest.cpp  RotateAroundPointTest.cpp  RotpointTest.cpp  StandFreeTest.cpp  TestX.cpp
src/tactics/: Anouk_BallPlacementThemPlay.cpp  Anouk_BallPlacementUsPlay.cpp  Anouk_MultipleDefendersPlay.cpp  Anouk_PrepareDirectThem.cpp  Anouk_StopPlay.cpp  AttackerTactic.cpp  BallPlacementThemPlay.cpp  BallPlacementUsPlay.cpp  BasicAttackTactic.cpp  BasicDefenseTactic.cpp  BasicKeeperTactic.cpp  Bob_ChipoffAtGoalPlay.cpp  Bob_KickoffWithRunPlay.cpp  Bob_PenaltyShootOutPlay.cpp  CMakeLists.txt  CounterPlay.cpp  DemoTactic.cpp  Emiel_IndirectUsPlay.cpp  Emiel_Prepare.cpp  Emiel_PrepareKickoffThem.cpp  Emiel_PrepareKickoffUs.cpp  Emiel_PreparePenaltyThem.cpp  Emiel_PreparePenaltyUs.cpp  Emiel_test1.cpp  FormationPlay.cpp  FreeKickDefenceTactic.cpp  GoToLeftTactic.cpp  GoToRightTactic.cpp  GoToSideTactic.cpp  HaltTactic.cpp  InterceptorsTactic.cpp  Jelle_DemoPlay.cpp  Jelle_IndependentAttackersPlay.cpp  Jim_GetBallPlay.cpp  Jim_IndependentAttackersPlay.cpp  Jim_IndirectGetBallPlay.cpp  Jim_KickOffDefense.cpp  Jim_MultipleDefendersPlay.cpp  Jim_MultipleDefendersPlayOld.cpp  Jim_MultipleStrikersPlay.cpp  (+29 more)
src/tactics/qualification/: SoloAttackerTactic.cpp  SoloDefenderTactic.cpp  solo_attacker_tactic.cpp  solo_defender_tactic.cpp
src/tactics/rtt_bob/: BestTactic.cpp  NaiveGetBallWithSupportPlay.cpp  SingleKeeperPlay.cpp  WorstTactic.cpp  unity.cpp
src/trees/: .gitignore  BehaviorTree.json  BehaviorTreeCopy.json  CMakeLists.txt  alltrees_factory.cpp  convert.sh  rtt_bob_trees.cpp
src/trees/json/: 1_2_R1.json  1_2_R2.json  1_2_Tree_1.json  1_2_Tree_2.json  AttackerStrategy.json  BasicAttacker1.json  BasicAttacker2.json  BasicKeeperTree.json  BasicRole.json  BasicStrategy.json  BounceBall.json  CMakeLists.txt  CheckParamTest.json  CoolRole.json  CoolTree.json  DefenderStrategy.json  DemoStrategy.json  DistanceTesterTree.json  FreeKickDefenceStrategy.json  GoToPosTree.json  HarasserTree.json  InterceptorTree.json  PassToPointStrategy.json  Passer.json  Receiver.json  SecondaryKeeperTree.json  SideSideStrategy.json  SideSideTestTree.json  SimpleAttackerStrategy.json  SimpleFieldPlayer.json  SimpleSideSideStrategy.json  SuperCoolTree.json  TestBallInZone.json  TestRefTree.json  testparams.json
src/trees/projects/: CMakeLists.txt  awesome_trees.b3  bad_trees.b3  jim.b3  qualification.b3  rtt_anouk.b3  rtt_bob.b3  rtt_dennis.b3  rtt_emiel.b3  rtt_ewoud.b3  rtt_jelle.b3  rtt_jim.b3  rtt_wybe.b3
src/utils/: BBParser.cpp  BTRunner.cpp  BtDebug.cpp  CMakeLists.txt  ComputePassPoint.cpp  Cone.cpp  Control.cpp  CrashHandler.cpp  DangerFinder.cpp  Draw.cpp  FeedbackCollector.cpp  GoalPartition.cpp  IWantToSeeRobot.cpp  Intercept.cpp  LastRef.cpp  LastWorld.cpp  Leaf.cpp  LeafRegister.cpp  Math.cpp  NodeFactory.cpp  OpportunityFinder.cpp  Parts.cpp  RefStateSwitch.cpp  RobotDealer.cpp  RobotPatternGenerator.cpp  RobotsToDefendFinder.cpp  ScopedBB.cpp  StrategyComposer.cpp  debug_print.cpp  nasty_roboteam_input_patch.cpp  passpoint_weights.txt  utils.cpp
src/utils/OpportunityFinderWeights/: assister.txt  jelle.txt  jellePass.txt  jelle_backup.txt  midfielder.txt  pass.txt  spits.txt  striker.txt  winger.txt
src/utils/PassPointWeights/: aanspeler.txt  passpoint_weights (copy).txt  passpoint_weights.txt  spits (copy).txt  spits.txt  vrijstaan.txt
src/utils/intercept/: intercept2.cpp  intercept2.h  (+2 more)
(+389 files in other folders)
