add_library(skills
    AimAt.cpp
    Block.cpp
    FollowPath.cpp
    GoToPos.cpp
    RotateAroundPoint.cpp
    AvoidRobots.cpp
    Dribble.cpp
    DribbleCurve.cpp
    GetBall.cpp
    Kick.cpp
    KeeperBlock.cpp
    SecondaryKeeper.cpp
    StandFree.cpp
    RandomDrive.cpp
    )
add_dependencies(skills
    ${${PROJECT_NAME}_EXPORTED_TARGETS}
    ${catkin_EXPORTED_TARGETS}
    )
